# jean-memory

./: .dockerignore  .env.example  .gitignore  MCP_ROADMAP.md  PROJECT_STATUS.md  README.md  SETUP.md  STATUS.md  deploy.sh  deployment_and_integration_plan.md  docker-compose.yml  google_auth_400_error_debug_plan.md  iap_policy.yaml
.cursor/: mcp.json  (+1 more)
backend/: .env  .env.example  CLAUDE_CONFIG.md  Dockerfile  README.md  ROUTER_SYSTEM.md  fix_paths.py  jean_mcp_server.py  minimal_mcp_server.py  pyproject.toml  test_mcp.py  test_mcp_client.py  test_tenant_isolation.py
backend/app/: README.md  app.py  auth.py  config.py  gemini_api.py  main.py  middleware.py  models.py
backend/app/routers/: github_oauth_router.py  google_auth_router.py  obsidian_router.py
backend/archive_servers/: run_mcp_server.py  standalone_mcp_server.py
backend/archive_tests/: curl_test.sh  mcp_cli_test.sh  multi_tenant_demo.py  simple_test.py  test_mcp.py
backend/database/: README.md  __init__.py  context_storage.py
backend/examples/: mcp_client_example.py
backend/jean_mcp/: README.md  __init__.py
backend/jean_mcp/resources/: __init__.py  prompts.py
backend/jean_mcp/server/: __init__.py  mcp_config.py  mcp_server.py  middleware.py
backend/routers/: README.md  context_router.py  conversations_router.py  github_oauth_router.py  github_router.py  locations_router.py  media_router.py  notes_router.py  obsidian_router.py  tasks_router.py  values_router.py  work_router.py
backend/services/: README.md  gemini_api.py
backend/tests/: test_cors.py  test_mcp_endpoint.py  test_mcp_mock.py
(+39 files in other folders)
